Html movidos a la raiz.

--- a/css/style.css
+++ b/css/style.css
@@ -230,25 +230,24 @@ nav ul ul li{
 
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-
 @media only screen and (max-width: 768px) {
     [class*="col-"] {
       width: 100%;
     }
   }
+
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
 
 .sushiCarouselImg img {
     width: auto;
@@ -266,4 +265,72 @@ nav ul ul li{
 
 }
 
+.card-body{
+    background-color: rgb(14, 13, 13);
+    color:blanchedalmond;
+
+}
+
+.wrapper {
+    padding-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: 100px;
+    grid-template-areas:
+      "a a b b c c"
+      "a a b b c c"
+      "a a b b c c"
+      "a a b b c c"
+      "d d e e f f"
+      "d d e e f f"
+      "d d e e f f"
+      "d d e e f f";
+    align-items:start;
+    justify-items: center;
+    justify-content: center;
+  }
+  .item1 {
+    grid-area: a;
+    margin-left: 470px;
+    margin-top: 50px;
+  }
+  .item2 {
+    grid-area: b;
+    margin-left: 470px;
+    margin-top: 50px;
+  }
+  .item3 {
+    grid-area: c;
+    margin-left: 470px;
+    margin-top: 50px;
+  }
+  .item4 {
+    grid-area: d;
+    margin-left: 470px;
+    margin-top: 50px;
+  }
+  .item5 {
+    grid-area: e;
+    margin-left: 470px;
+    margin-top: 50px;
+  }
+  .item6 {
+    grid-area: f;
+    margin-left: 470px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  
+  .btn-primary{
+    background-color:#6e0808;
+    border-color: darkgray;
+
+  }
+
+  .btn-primary:hover{
+    background-color:#5a0303;
+    border-color: dimgrey;
+
+  }
 
